--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pg": "^8.15.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.4"
   },
